--- a/decore-ui/css/decore.css
+++ b/decore-ui/css/decore.css
@@ -10,6 +10,7 @@ html, body {
         left: 0;
         right: 0;
         position: fixed;
+        float: unset;
     }
 
 #blueimp-gallery-carousel{
