--- a/decore-ui/css/decore.css
+++ b/decore-ui/css/decore.css
@@ -15,17 +15,17 @@ html, body {
 
     .weatherwidget-io{
         width: 600px;
+        border-radius: 10px;
         height: auto;
         box-shadow: 0px 0px 26px 1px rgba(0, 0, 0, 0.55);
     }
     #currency{
       top: 48%;
       left: 5%;
-      height: 800px !important;
       width: 600px;
-      position: fixed;
-      
+      position: fixed;         
     }
+
     #weather{
       top: 4.6%;
       left: 5%;
